--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 pip>=24.2
-setuptools
-pandas==1.3.3
+setuptools>=74.1.2
+wheel>=0.44.0
+numpy>=1.21.0
+pandas>=1.3.3
 names==0.3.0
-matplotlib==3.9.2
-openpyxl==3.1.5
-plotly==5.24.0
-streamlit==1.26.00
-ipykernel==6.29.5
-psycopg2-binary==2.9.9
+matplotlib>=3.4.3
+openpyxl>=3.0.9
+plotly>=5.3.1
+streamlit>=1.0.0
+ipykernel>=6.0.0
+psycopg2-binary>=2.9.0
